--- a/How does artificial intelligence help us inour life.html
+++ b/How does artificial intelligence help us inour life.html
@@ -17,7 +17,7 @@
             <center><b><h1>How does artificial intelligence help us in our life</h1></b></center>
             <ol>
               <li><p style="font-size : 30px;"><strong>Google Maps and Ride-Hailing Applications:</strong></p><br>
-                <img src="pic1.jpg" alt="Google Mabs " width="30%" class="id"><br>
+                <img src="pic1.jpg" alt="Google Mabs " width=30% class="id"><br>
                 <p style="font-size : 30px;">
                   One doesn’t have to put much thought into traveling to a new destination anymore. Instead of having to rely on confusing address directions, you can now simply open up the handy map application on your phone and type in your destination.
                 </p>
