Update How does artificial intelligence help us inour life.html

--- a/How does artificial intelligence help us inour life.html
+++ b/How does artificial intelligence help us inour life.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"> <meta name="description" content="importance of learning">
         <title> How does artificial intelligence help us in our life </title>
         <style>
             body{background:url(cover.jpg);
@@ -14,7 +13,7 @@
 
     </head>
     <body>
-            <center><b><h1>How does artificial intelligence help us in our life</h1></b></center>
+        <center><h1><b>How does artificial intelligence help us in our life</b></h1></center>
             <ol>
               <li><p style="font-size : 30px;"><strong>Google Maps and Ride-Hailing Applications:</strong></p><br>
                 <img src="pic1.jpg" alt="Google Mabs " width=30% class="id"><br>
