Update How does artificial intelligence help us inour life.html

--- a/How does artificial intelligence help us inour life.html
+++ b/How does artificial intelligence help us inour life.html
@@ -22,7 +22,7 @@
                 </p>
               </li>
                 <li><p style="font-size : 30px;"><strong>manufacturing robots:</strong></p><br>
-                  <img src="pic2.jpg" alt="manufacturing robots " width="30%" class="id"><br>
+                  <img src="pic2.jpg" alt="manufacturing robots " class="id"><br>
                   <p style="font-size : 30px;">
                     Robotics and manufacturing are a natural partnership. Robotics play a major role in the manufacturing landscape today. Automated manufacturing solutions should be a key part of any operation that strives for maximum efficiency, safety and competitive advantage in the market. Manufacturing robots automate repetitive tasks, reduce margins of error to negligible rates, and enable human workers to focus on more productive areas of the operation.
                   </p>
